--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -10,7 +10,7 @@ body {
     // padding: 0 15px;
 }
 
-/* ------------nav text Color--------- */
+/* ------------nav background Color--------- */
 .black {
     color: #000;
 }
@@ -19,6 +19,12 @@ body {
     border: 1px solid #fff !important;
     background: rgba(0, 0, 0, .35);
 }
+.grey {
+    background-color: rgba(255, 255, 255, .35);
+    color: #000;
+}
+
+
 /* ------------------------------- */
 
 /* --------------nav Container------------ */
