--- a/src/assets/scss/blocks/_menu.scss
+++ b/src/assets/scss/blocks/_menu.scss
@@ -1,5 +1,5 @@
 .menu {
-    display: none;
+    // display: flex;
     background-image: url(../img/bg-menu.png); 
     position: absolute;
     top: 0;
