--- a/src/assets/scss/components/_slider.scss
+++ b/src/assets/scss/components/_slider.scss
@@ -1,5 +1,5 @@
 .swiper-container {
-    padding-top: 97px;
+    // padding-top: 97px;
     width: 100%;
     height: 100%;
 }
@@ -23,4 +23,10 @@
     color: #fff;
     padding: 10px 28px;
     border: 4px solid #fff;
+}
+.swiper-slide {
+    text-align: center;
+    margin: 97px 0 93px;
+    font-size: 30px;
+    font-weight: bold;
 }
