--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -18,15 +18,17 @@
 @import "blocks/menu";
 @import "blocks/nav";
 @import "blocks/footer";
-@import "pages/registr/form";
+@import "pages/form/form";
 @import "pages/office/office";
 
-@import "component/slider";
+@import "components/slider";
 
-@import "pages/news/news";
+@import "pages/announ/announ";
 @import "pages/manual/manual";
 @import "pages/reporting/reporting";
 @import "pages/about/about";
 @import "pages/apartment/apartment";
 @import "pages/product/product";
+@import "pages/immovable/immovable";
+@import "pages/cabinet/cabinet";
 
