--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -1,3 +1,9 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
     font-family: 'Roboto';
     font-weight: 400;
@@ -39,6 +45,7 @@ body {
     font-size: 30px;
     font-weight: bold;
     color: #221F39;
+    margin: 33px 0 17px;
 }
 
 .btn {
