--- a/src/assets/scss/blocks/_nav.scss
+++ b/src/assets/scss/blocks/_nav.scss
@@ -7,6 +7,9 @@
     &--apartment {
         box-shadow: none;
     }
+    &--index {
+        box-shadow: none;
+    }
 
     &__block {
         display: flex;
