--- a/src/assets/scss/pages/apartment/_apartment.scss
+++ b/src/assets/scss/pages/apartment/_apartment.scss
@@ -81,6 +81,19 @@
             padding: 50px 0 50px;
             &__btn {
                 text-decoration: none;
+                &--list {
+                    background-color: #fff;
+                    border: 1px solid #000;
+                    color:#000;
+                    margin-left: 30px;
+                    padding: 15px 49px;
+                    transition: .4s linear;
+                    &:hover {
+                        background-color: #0ABE3D;
+                        color: #fff;
+                        border: 1px solid #fff;
+                    }
+                }
             }
         }
 }
