--- a/src/assets/scss/pages/register/_register.scss
+++ b/src/assets/scss/pages/register/_register.scss
@@ -1,43 +1,65 @@
-.form {
+.register {
     padding: 40px 60px;
-
     &-block {
         display: flex;
         justify-content: space-between;
     }
 
     &-item {
+        width: 33.3%;
+        &:nth-child(2) {
+            width: 40%;
+        }
+        &:nth-child(3) {
+            text-align: right;
+        }
         &__title {
+            text-align: center;
             font-size: 30px;
             font-weight: bold;
-            color: #0ABE3D;
-            margin-top: 20px;
-            margin-bottom: 20px;
+            color: #0ABE3D; 
+            margin: 0;
+       
         }
 
         &__subtitle {
             text-align: center;
             font-size: 20px;
-            margin: 0;
             line-height: 1.5;
         }
 
         &__group {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
             max-width: 430px;
             padding-bottom: 50px;
-
-            input {
-                background-color: #D9D4FF;
-                border: none;
-                height: 41px;
-                width: 330px;
-                outline: none;
-            }
+           
+                input {
+                    display: block;
+                    background-color: #D9D4FF;
+                    border: none;
+                    height: 41px;
+                    width: 310px;
+                    outline: none;
+                    margin-top: 5px;
+                    padding-left: 20px;
+                }
+        }
+        &__password {
+            position: relative;
+        }
+        &__eye {
+            display: block;
+            position: absolute;
+            top: 8px;
+            right: 10px;
+            cursor: pointer;
         }
 
-        &__text {
+        &__list {
             font-size: 18px;
-            margin-bottom: 2px;
+            margin-top: 5px;
         }
 
         &__btn {
@@ -55,6 +77,7 @@
         }
 
         &__sign {
+            text-align: center;
             font-size: 18px;
             margin-top: 49px;
 
