--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -18,17 +18,21 @@
 @import "blocks/menu";
 @import "blocks/nav";
 @import "blocks/footer";
-@import "pages/form/form";
-@import "pages/office/office";
 
 @import "components/slider";
 
+@import "pages/register/register";
+@import "pages/verify/verify";
+@import "pages/office/office";
 @import "pages/announ/announ";
+@import "pages/news/news";
 @import "pages/manual/manual";
 @import "pages/reporting/reporting";
 @import "pages/about/about";
 @import "pages/apartment/apartment";
 @import "pages/product/product";
 @import "pages/immovable/immovable";
-@import "pages/cabinet/cabinet";
+@import "pages/cabinet/cabinet";      
+@import "pages/list/list";      
+@import "pages/director/director";      
 
