--- a/src/assets/scss/blocks/_footer.scss
+++ b/src/assets/scss/blocks/_footer.scss
@@ -9,6 +9,7 @@
     &__block {
         display: flex;
         justify-content: space-between;
+        align-items: flex-end;
     }   
 
     &-list {
@@ -27,10 +28,13 @@
         &__title {
             font-weight: bold;
             font-size: 22px;
+            margin-bottom: 42px;
         }
+        
         &__text {
             font-size: 18px;
             line-height: 1.8;
+            margin: 42px 0 31px;
         }
         &__copyright {
             display: flex;
