--- a/src/assets/scss/blocks/_header.scss
+++ b/src/assets/scss/blocks/_header.scss
@@ -4,27 +4,29 @@
     background-repeat: no-repeat;
     height: 100vh;
     position: relative;
+    overflow: hidden;
 
 
     &__top {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding-top: 15px;
-        padding:  0 40px;
-        z-index: 999;
         position: absolute;
+        z-index: 999;
         top: 0;
         right: 0;
         left: 0;
+        
+        padding-top: 15px;
+        padding:  0 40px;
     }
 
     &__list  {
         display: flex;
         justify-content: flex-end;
-        list-style-type: none;;
         margin: 0;
         padding: 0;
+        list-style-type: none;;
         &-item{
             margin: 0;
             padding: 0;
@@ -46,18 +48,7 @@
     &__search {
         margin-right: 67px;
     }
-    .swiper-slide{
-        position: relative;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        .header__block{
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-        }
-    }
+ 
     
     &__bottom{
         position: absolute;
