--- a/src/assets/scss/components/_menu.scss
+++ b/src/assets/scss/components/_menu.scss
@@ -1,28 +1,28 @@
 .menu {
-    // display: flex;
     background-image: url(../img/bg-menu.png); 
     position: absolute;
     top: 0;
-    bottom: 0;
     right: 0;
+    bottom: 0;
     width: 480px;
     z-index: 99;
+    margin-right: -30px;
     overflow: hidden;
-
-    &--active {
-        display: block;
+    transition: all .8s ease-in;
+    transform: translateX(100%);
+    &-list {
+        margin-left: 50px;
     }
+
+ 
     
     &__block{
         position: absolute;
         top: 0;
-        bottom: 0;
+        bottom: 20px;
         width: 100%;
         overflow-y: scroll;
 
-        &--active {
-            transform: translateX(-100%);
-        }
     }
     
     &__close {
