--- a/src/assets/scss/pages/director/_director.scss
+++ b/src/assets/scss/pages/director/_director.scss
@@ -39,6 +39,12 @@
             font-size: 16px;
             padding-left: 18px;
         }
+        &__img {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            
+        }
     }
 
     &-form {
@@ -46,6 +52,9 @@
             width: 700px;
             display: flex;
             justify-content: space-between;
+            &--second {
+                margin-top: 17px;
+            }
         }
 
         &__item {
