--- a/src/assets/scss/pages/news/_news.scss
+++ b/src/assets/scss/pages/news/_news.scss
@@ -12,6 +12,7 @@
         :hover {
             background-color:#0ABE3D;
             border: solid 1px transfarom #fff;
+            color: #fff;
         }
     }
     &__link {
