--- a/src/assets/scss/pages/reporting/_reporting.scss
+++ b/src/assets/scss/pages/reporting/_reporting.scss
@@ -16,6 +16,7 @@
         display: flex;
         align-items: center;
         width: 50%;
+        margin: 22px 0 37px;
 
         &--center {
             justify-content: center;
@@ -33,6 +34,7 @@
             align-items: center;
             justify-content: space-between;
             list-style-type: none;
+            margin-top: 40px;
         }
         &__btn {
             margin: 0;
@@ -48,6 +50,13 @@
             font-size: 18px;
             padding: 15px 42px;
             color: #221F39;
+            &:hover {
+                background-color:  #0ABE3D;
+                transition: .4s linear;
+                border: 1px solid #fff;
+                color: #fff;
+                box-shadow: 9px 14px 19px 0px rgba(120,255,44,0.26);
+            }
         }
     }
 
