--- a/src/assets/scss/pages/verify/_verify.scss
+++ b/src/assets/scss/pages/verify/_verify.scss
@@ -37,13 +37,14 @@
             color: #fff;
             background-color: #0ABE3D;
             padding: 9px 19px;
+            box-shadow: 9px 14px 19px 0px rgba(120,255,44,0.26);
         }
 
     }
     &-input {
         display: flex;
         input {
-            padding: 0 30px;
+            padding: 0 20px;
             letter-spacing: 5px;
             text-align: center;
             background-color:#D9D4FF;
@@ -64,8 +65,8 @@
             color: #fff;
             background-color: #0ABE3D;
             padding: 15px 14px;
+            box-shadow: 9px 14px 19px 0px rgba(120,255,44,0.26);
         }
     }
-  
     
 }
