--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -36,4 +36,6 @@
 @import "pages/list/list";      
 @import "pages/director/director";      
 @import "pages/calculator/calculator";      
+@import "pages/calculator/decor";      
+@import "pages/calculator/policyholder";      
 
