--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -58,10 +58,10 @@ body {
     margin-top: 27px;
     margin-bottom: 60px;
     cursor: pointer;
-    box-shadow: 9px 14px 19px 0px rgba(120,255,44,0.26);
+    box-shadow: 14px 18px 12px 8px #CEEDDC;
 }
 li {
-    list-style: none    ;
+    list-style: none;
 }
 
     
