--- a/src/assets/scss/pages/cabinet/_cabinet.scss
+++ b/src/assets/scss/pages/cabinet/_cabinet.scss
@@ -29,13 +29,30 @@
             align-items: center;
             width: 182px;
             height: 50px;
-            background-color: #0ABE3D;
-            color: #fff;
+            background-color: #fff;
+            color: #000;
             text-decoration: none;
             font-size: 18px;
+            border: 1px solid #000;
+            transition: .3s linear;
+            &:hover {
+                background-color: #0ABE3D;
+                color: #fff;
+                border: 1px solid #fff;
+                box-shadow: 14px 18px 12px 8px #CEEDDC;
+            }
         }
         &__btn {
           margin-bottom: 25px;
         }
+    }
+    &-form {
+        background-color: #e6e6e6;
+        width: 812px;
+        border-radius: 5px;
+        &__title {
+            text-align: center;
+        }
+        
     }
 }
