--- a/src/assets/scss/pages/calculator/_calculator.scss
+++ b/src/assets/scss/pages/calculator/_calculator.scss
@@ -1,4 +1,12 @@
 .calculator {
+    &-block {
+        background-image: url(../img/cal-bg.jpg);
+        background-size: cover;
+        background-repeat: no-repeat;
+        width: 701px;
+        height: 364px;
+        margin: 41px 0 30px;
+    }
     &-step {
         display: flex;
         flex-direction: column;
@@ -33,7 +41,6 @@
             font-size: 18px;
             margin-left: 42px;
             margin-top: 5px;
-
             span {
                 color: #0ABE3D;
             }
@@ -50,76 +57,7 @@
         display: flex;
     }
     &-list {
+    }
         display: flex;
-    }
     
-}
-
-.decor {
-    display: flex;
-
-    &-calculator {
-        background-image: url(../img/cal-bg.jpg);
-        background-size: cover;
-        background-repeat: no-repeat;
-        width: 701px;
-        height: 364px;
-        margin-top: 41px;
-        flex: 2;
-    }
-
-    &-aside {
-        background-color: #e6e6e6;
-        width: 330px;
-        margin-top: 41px;
-        color: #221F39;
-        border-radius: 8px;
-        // box-shadow: rgba (252, 252, 252 .35);   
-    
-        flex: 1;
-        &__title {
-            margin-top: 29px;
-            font-size: 20px;
-            text-align: center;
-        }
-        &__block {
-            font-size: 18px;
-            padding: 0 42px;
-            list-style: none;
-        }
-        &__list {
-            width: 236px;
-            margin: 0 auto;
-            margin-bottom: 20px;
-            span {
-                font-weight: bold;
-                display: block;
-                margin-top: 10px;
-            }
-        }
-        &__line {
-
-            border: 1px solid #C6C2C2; 
-            width: 197px;
-            margin: 0 auto;
-            margin-top: 15px;
-            margin-bottom: 15px;
-        }
-        &__price {
-            text-align: center;
-            font-weight: bold;
-            font-size: 35px;
-        }
-        &__btn {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin: 0 auto;
-            margin-top: 9px;    
-            margin-bottom: 28px;
-            text-decoration: none;
-            width: 203px;
-        }
-    }
-   
 }
