--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -58,11 +58,30 @@ body {
     margin-top: 27px;
     margin-bottom: 60px;
     cursor: pointer;
-    box-shadow: 14px 18px 12px 8px #CEEDDC;
+    box-shadow: 5px 5px 8px 5px #CEEDDC;
 }
 li {
     list-style: none;
 }
+
+.text-center {
+    text-align: center;
+}
+
+.cabinet-input {
+    padding: 10px 0 10px 18px;
+
+    outline: none;
+    background: #F7F9FC;
+    border: 1px solid #221F39;
+    border-radius: 4px;
+    transition: border .3s ease;
+
+    &:focus {
+        border-color: #0ABE3D;
+    }
+}
+
 
     
 
