--- a/src/assets/scss/components/_menu.scss
+++ b/src/assets/scss/components/_menu.scss
@@ -8,8 +8,12 @@
     z-index: 99;
     margin-right: -30px;
     overflow: hidden;
-    transition: all .8s ease-in;
+    transition: all .5s ease-in;
     transform: translateX(100%);
+    opacity: 1;
+    &--white {
+        background-image: url(../img/white-menu-bg.jpg);
+    }
     &-list {
         margin-left: 50px;
     }
@@ -57,8 +61,95 @@
        font-size: 22px;
        font-weight: bold;
        margin-top: 27px;
-     
-
-      
    }
+}
+
+
+
+
+.login {
+    width: 480px;
+    height: 450px;
+    position: absolute;
+    right: 0;
+    top: 0;
+    z-index: 9;
+
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    margin-right: -30px;
+
+    background-image: url(../img/bg-menu.png); 
+    background-size: cover;
+    background-repeat: no-repeat;
+    
+  
+    transition: all .8s ease-in;
+    // transform: translateX(100%);
+    opacity: 0;
+    z-index: -1;
+
+    &-main {
+        display: flex;
+        align-self: flex-start;
+        padding-left: 75px;
+        margin-bottom: 30px;
+    }
+    &-title {
+        color: #fff;
+        font-size: 22px;
+        font-weight: bold;
+        margin-left: 60px;
+    }
+    &-form {
+        :last-child {
+            margin-top: 8px;
+        }
+        &__gruop {
+            display: block;
+            width: 330px;
+        }
+        &__text {
+            display: block;
+            color: #fff;
+            font-size: 18px;
+            padding-left: 7px;
+        }
+        &__input {
+            width: 330px;
+            height: 41px;
+            padding-left: 18px;
+            background: none;
+            color: #fff;
+            border: 2px solid #fff;
+            border-radius: 5px;
+            outline: none;
+            font-size: 25px;
+
+            &:focus {
+                border-color:#0ABE3D;
+            }
+            
+        }
+        &__link {
+            margin-top: 30px;
+        }
+        &__btn {
+            width: 330px;
+            border: 1px solid #fff;
+            text-decoration: none;
+            color: #fff;
+            padding: 12px 45px;
+            margin: 0;
+            transition: .3s linear;
+            &:hover {
+                background-color: #0ABE3D;
+                border-color: #0ABE3D;
+            }
+        }
+
+
+    }
 }
