--- a/src/assets/scss/pages/apartment/_apartment.scss
+++ b/src/assets/scss/pages/apartment/_apartment.scss
@@ -8,6 +8,7 @@
             text-align: center;
             font-size: 70px;
             color: #fff;
+            margin: 0 auto;
             margin-bottom: 15px;
             h2{
                 margin-bottom: 0;
