--- a/src/assets/scss/pages/cabinet/_cabinet.scss
+++ b/src/assets/scss/pages/cabinet/_cabinet.scss
@@ -3,9 +3,19 @@
         text-align: center;
         font-size: 30px;
         font-weight: bold;
+        margin: 34px 0 40px;
+    }
+    &-block {
+        max-width: 1340px;
+        margin: 0 auto;
+        display: flex;
+        justify-content: space-between;
+        padding-bottom: 29px;
+      
     }
     &-list {
         padding: 0;
+      
         &:last-of-type {
             margin-bottom: 25px;
         }
@@ -20,8 +30,9 @@
             align-items: center;
             font-size: 18px;
             font-weight: bold;
-            
-           
+            :nth-child(2) {
+                margin: 20px 0;
+                }
         }
         &__link {
             display: flex;
@@ -39,20 +50,159 @@
                 background-color: #0ABE3D;
                 color: #fff;
                 border: 1px solid #fff;
-                box-shadow: 14px 18px 12px 8px #CEEDDC;
+                box-shadow: 5px 5px 8px 5px #CEEDDC;
             }
         }
         &__btn {
           margin-bottom: 25px;
         }
     }
+ 
+
+    &-sidebar {
+        margin-left: 30px;
+    }
+
     &-form {
-        background-color: #e6e6e6;
-        width: 812px;
-        border-radius: 5px;
+        max-width: 812px;
+        padding: 23px 55px 40px;
+
+        background-color: #F7F9FC;
+        border-radius: 4px;
+        box-shadow: 5px 7px 10px -9px rgba(0,0,0,0.59);
+
         &__title {
-            text-align: center;
+            font-size: 22px;
+            font-weight: 400;
+            color: #221F39;
         }
-        
+
+        &__text {
+            display: block;
+        }
+
+        &__group {
+            display: flex;
+            justify-content: space-between;
+
+            &:last-child {
+                margin-top: 15px;
+            }
+        }
+
+        &__text {
+            margin: 0 0 5px 5px;
+            color: #221F39;
+            font-size: 18px;
+        }
+
+        &__top-input {
+            width: 239px;
+            font-size: 16px;
+        }
+
+        &__medium-input {
+            width: 330px;
+            font-size: 16px;
+        }
+
+        &__full-input {
+            width: 702px;
+            font-size: 16px;
+        }
+
+        &__bottom-input {
+            width: 210px;
+            font-size: 16px;
+        }
+        &__group--middle {
+            margin: 20px 0;
+        }
+
+        &__btn {
+            width: 155px;
+
+            margin: 0 auto;
+            margin-top: 40px;
+            padding: 17px 37px;
+
+            background-color: #0ABE3D;
+            box-shadow: 5px 5px 8px 5px #CEEDDC;
+            cursor: pointer;
+            a {
+                text-decoration: none;
+                color: #fff;   
+            }
+        }
+
+
+    }
+
+    &-group {
+        &__item:last-child {
+            width: 516px;
+        }
+
+        &__item-medium {
+            width: 702px;
+        }
+
+        &__title {
+            margin: 25px 0;
+
+            font-size: 20px;
+            color: #221F39;
+        }
+
+        &__block {
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+        }
+
+        &__id {
+            text-align: right;
+        }
+
+        &__add {
+            display: block;
+            margin-top: 11px;
+            color: #221F39;
+        }
+
+       
+    }
+
+}
+.content-table {
+    margin-top: 10px;
+    
+}
+.content__title {
+    margin-top: 5px;
+}
+.table {
+    width: 1000px;
+    border-collapse: collapse;
+    border-spacing: 0;
+    font-size: 12px;
+    margin-top: 35px;
+    th {
+        padding: 20px 0 23px;
+        a {
+            color: #0ABE3D;
+        }
+    }
+    &-info {
+        border-bottom: 1px solid #707070;
+        color: #707070;
+        &:last-child {
+            border-bottom: none;
+        }
+    }
+    &-red {
+        color: #C12929;
     }
 }
+
+
