--- a/src/assets/scss/pages/calculator/_policyholder.scss
+++ b/src/assets/scss/pages/calculator/_policyholder.scss
@@ -4,6 +4,10 @@
     padding: 28px 92px 43px;
     border-radius: 4px;
     margin-bottom: 30px;
+    &--cal {
+        background-color: #fff;
+        padding: 0;
+    }
     &-title {
         margin-bottom: 27px;
         font-size: 22px;
@@ -51,6 +55,24 @@
             margin: 0;
             text-decoration: none ;
         }
+
+        &__block {
+            display: flex;
+            justify-content: space-between;
+            width: 710px;
+        }
+
+        &__check {
+            padding: 15px 0;
+            font-size: 18px;
+        }
+
+        &__range {
+            width: 630px;
+            border: 5px solid #e6e6e6;
+            border-radius: 15px;
+        }
+        
     }
 
     &-input {
