--- a/src/assets/scss/pages/director/_director.scss
+++ b/src/assets/scss/pages/director/_director.scss
@@ -87,6 +87,7 @@
         margin-top: 50px;
         margin-bottom: 79px;
         background-color: #0ABE3D;
+        box-shadow: 5px 5px 8px 5px #CEEDDC;
         color: #fff;
         font-size: 18px;
 
