--- a/src/assets/scss/pages/product/_product.scss
+++ b/src/assets/scss/pages/product/_product.scss
@@ -31,6 +31,9 @@
             height: 200px;
             width: 530px;
             margin-top: 41px;
+            // &:hover {
+            //     transform: scale(1.2);
+            // }
         }
        &__link {
             display: flex;
