--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -21,6 +21,7 @@
 @import "components/_styles.imageuploader.scss";
 @import "components/menu";
 @import "components/slider";
+@import "components/modal";
 
 @import "pages/register/register";
 @import "pages/verify/verify";
