--- a/src/assets/scss/components/_menu.scss
+++ b/src/assets/scss/components/_menu.scss
@@ -41,27 +41,27 @@
         margin: 65px 0 52px;
         text-align: center;
     }
-   &__item {
-       padding-top: 15px;
-       list-style-type: none;
-       line-height: 1.5;
-       span {
-           color: #0ABE3D;
-       }
-   }
-   &__link {
-       text-decoration: none;
-       color: #fff;
-       font-size: 18px;
-       font-weight: 600;
-       margin-left: 15px;
-   }
-   &__name {
-       color:#fff;
-       font-size: 22px;
-       font-weight: bold;
-       margin-top: 27px;
-   }
+    &__item {
+        padding-top: 15px;
+        list-style-type: none;
+        line-height: 1.5;
+        span {
+            color: #0ABE3D;
+        }
+    }
+    &__link {
+        text-decoration: none;
+        color: #fff;
+        font-size: 18px;
+        font-weight: 600;
+        margin-left: 15px;
+    }
+    &__name {
+        color:#fff;
+        font-size: 22px;
+        font-weight: bold;
+        margin-top: 27px;
+    }
 }
 
 
@@ -85,7 +85,6 @@
     background-size: cover;
     background-repeat: no-repeat;
     
-  
     transition: all .8s ease-in;
     // transform: translateX(100%);
     opacity: 0;
@@ -104,6 +103,9 @@
         margin-left: 60px;
     }
     &-form {
+        &__label {
+            position: relative;
+        }
         :last-child {
             margin-top: 8px;
         }
@@ -150,6 +152,10 @@
             }
         }
 
-
+        &__eye {
+            position: absolute;
+            right: 18px;
+            top: 18px;
+        }
     }
 }
