--- a/src/assets/scss/pages/calculator/_policyholder.scss
+++ b/src/assets/scss/pages/calculator/_policyholder.scss
@@ -67,11 +67,11 @@
             font-size: 18px;
         }
 
-        &__range {
-            width: 630px;
-            border: 5px solid #e6e6e6;
-            border-radius: 15px;
-        }
+        // &__range {
+        //     width: 630px;
+        //     border: 5px solid #e6e6e6;
+        //     border-radius: 15px;
+        // }
         
     }
 
