--- a/src/assets/scss/pages/product/_product.scss
+++ b/src/assets/scss/pages/product/_product.scss
@@ -5,6 +5,8 @@
         flex-wrap: wrap;
         align-items: center;
         padding-bottom: 60px;
+        padding-left: 20px;
+        padding-right: 20px;
         :nth-child(1) {
             margin-top: 0;
         }
@@ -49,3 +51,4 @@
        }
     }
 }
+
