--- a/src/assets/scss/pages/calculator/_policyholder.scss
+++ b/src/assets/scss/pages/calculator/_policyholder.scss
@@ -14,6 +14,10 @@
         color: #221F39;
     }
 
+    &-subtitle {
+        font-size: 16px;
+    }
+
     &-block {
         &__item {
             display: flex;
@@ -67,11 +71,15 @@
             font-size: 18px;
         }
 
-        // &__range {
-        //     width: 630px;
-        //     border: 5px solid #e6e6e6;
-        //     border-radius: 15px;
-        // }
+        &__oferta {
+            text-align: center;
+            font-size: 12px;
+            margin-top: 23px;
+            span {
+                color: #0ABE3D;
+            }
+        }
+
         
     }
 
