--- a/src/assets/scss/pages/register/_register.scss
+++ b/src/assets/scss/pages/register/_register.scss
@@ -1,4 +1,13 @@
 .register {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    z-index: -1;
+    opacity: 0;
+    transition: all .3s linear;
     padding: 40px 60px;
     &-block {
         display: flex;
@@ -61,14 +70,13 @@
         }
 
         &__btn {
-            width: 155px;
-            margin: 0 auto;
-            padding: 13px;
-            background-color: #0ABE3D;
             text-align: center;
-            font-size: 18px;
-            box-shadow: 9px 14px 19px 0px rgba(120,255,44,0.26);
             a {
+                padding: 13px 51px;
+                background-color: #0ABE3D;
+                text-align: center;
+                font-size: 18px;
+                box-shadow: 9px 14px 19px 0px rgba(120,255,44,0.26);
                 color: #fff;
                 text-decoration: none;
             }
