--- a/src/assets/scss/pages/verify/_verify.scss
+++ b/src/assets/scss/pages/verify/_verify.scss
@@ -1,4 +1,14 @@
 .verify {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+
+    transition: all .3s linear;
+    z-index: -1;
+    opacity: 0;
+    background-color: #fff;
     padding: 40px 0px;
     &-block {
         display: flex;
