--- a/src/assets/scss/pages/reporting/_reporting.scss
+++ b/src/assets/scss/pages/reporting/_reporting.scss
@@ -1,4 +1,6 @@
 .reporting {
+    position: relative;
+    overflow: hidden;
     &__subtitle {
         text-align: center;
         font-size: 20px;
