--- a/src/assets/scss/pages/about/_about.scss
+++ b/src/assets/scss/pages/about/_about.scss
@@ -3,7 +3,10 @@
         background-image: url(../img/about-bg-header.jpg);
         background-size: cover;
         background-repeat: no-repeat;
+        position: relative;
         height: 100vh;
+        overflow: hidden;
+        
 
         &__title {
             text-align: center;
