--- a/src/assets/scss/pages/news/_news.scss
+++ b/src/assets/scss/pages/news/_news.scss
@@ -1,4 +1,7 @@
 .news {
+    height: 100vh;
+    position: relative;
+    overflow: hidden;
     &__content {
         font-size: 21px;
         line-height: 1.5;
