--- a/src/assets/scss/pages/register/_register.scss
+++ b/src/assets/scss/pages/register/_register.scss
@@ -3,7 +3,9 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 100vh;
+    overflow-y: auto;
+
     background-color: #fff;
     z-index: -1;
     opacity: 0;
