--- a/src/assets/scss/blocks/_header.scss
+++ b/src/assets/scss/blocks/_header.scss
@@ -1,10 +1,10 @@
 .header {
-    background-image: url("./../img/bg-header.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    height: 100vh;
-    position: relative;
-    overflow: hidden;
+    // // background-image: url("./../img/bg-header.jpg");
+    // // background-size: cover;
+    // // background-repeat: no-repeat;
+    // height: 100vh;
+    // position: relative;
+    // overflow: hidden;
 
 
     &__top {
