--- a/src/assets/scss/components/_modal.scss
+++ b/src/assets/scss/components/_modal.scss
@@ -2,7 +2,7 @@
     width: 496px;
     height: 359px;
 
-    background-color: #fff;
+    background-color: #fff; 
 
     position: absolute;
     top: 0;
@@ -15,10 +15,23 @@
     transform: translateZ(100px);
     transition: all .5s linear;
 
-
+    &-close {
+        &__icon {
+            position: absolute;
+            top: 0;
+            right: 0;
+            bottom: -50px;
+        }
+    }
     &--calmodal2 {
-        width: 608px;
-        height: 518px;
+        position: absolute;
+        width: 590px;
+        height: 510px;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        z-index: -1;
+        opacity: 0;
     }
 
     &__group {
