--- a/src/assets/scss/components/_slider.scss
+++ b/src/assets/scss/components/_slider.scss
@@ -1,5 +1,11 @@
+.siema{
+    &__background {
+        width: 100%;
+        height: 100vh;
+    }
+    
+}
 .swiper {
-
     &-container {
         width: 100%;
         height: 100%;
@@ -105,10 +111,6 @@
     cursor: pointer;
 }
 
-.siema{
-    width: 100%;
-    height: 100vh;
-}
 
 
 
