--- a/src/assets/scss/blocks/_header.scss
+++ b/src/assets/scss/blocks/_header.scss
@@ -1,7 +1,5 @@
 .header {
-    // background-image: url("./../img/bg-header.jpg");
-    // background-size: cover;
-    // background-repeat: no-repeat;
+  
     height: 100vh;
     position: relative;
     overflow: hidden;
@@ -26,6 +24,7 @@
         align-items: center;
         justify-content: center;
         flex-direction: column;
+        padding: 0 30px;
     }
 
     &__list  {
