--- a/src/assets/scss/pages/calculator/_calculator.scss
+++ b/src/assets/scss/pages/calculator/_calculator.scss
@@ -7,12 +7,14 @@
         height: 364px;
         margin: 41px 0 30px;
     }
+
     &-step {
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
         height: 122px;
+
         &__text {
             display: flex;
             justify-content: space-between;
@@ -21,6 +23,7 @@
             padding-top: 16px;
         }
     }
+
     &-item {
         &__title {
             color: #fff;
@@ -29,6 +32,7 @@
             padding-top: 28px;
             padding-bottom: 11px;
         }
+
         &__subtitle {
             color: #fff;
             font-size: 22px;
@@ -36,28 +40,157 @@
             margin-top: 41px;
             margin-left: 42px;
         }
+
         &__text {
             color: #fff;
             font-size: 18px;
             margin-left: 42px;
             margin-top: 5px;
+
             span {
                 color: #0ABE3D;
             }
         }
+
         &__step {
-            background-color:rgba(255, 255, 255, .90%);
+            background-color: rgba(255, 255, 255, .90%);
             width: 657px;
             height: 122px;
             border-radius: 15px;
             margin: 0 auto;
         }
     }
+
     &-policy {
         display: flex;
     }
+
     &-list {
-    }
         display: flex;
-    
+    }
+
 }
+
+
+// .rs-range {
+
+//     &::-webkit-slider-runnable-track {
+//         cursor: pointer;
+//         background: #ccc;
+//         border-radius: 5px;
+//         border: 0px solid #ccc;
+//     }
+
+//     &::-webkit-slider-thumb {
+//         box-shadow: none;
+//         border: 0px solid #fff;
+//         height: 50px;
+//         width: 40px;
+//         background: url(../img/cal-icon.svg);
+//         background-repeat: no-repeat;
+//         background-size: cover;
+//         cursor: pointer;
+//         -webkit-appearance: none;
+//         margin-top: -25px;
+//     }
+
+//     &::-moz-range-thumb {
+//         box-shadow: none;
+//         border: 0px solid #fff;
+//         height: 42px;
+        
+//         width: 22px;
+//         cursor: pointer;
+//         -webkit-appearance: none;
+//         // margin-top: -20px;
+//     }
+
+//     &::-moz-focus-outer {
+//         border: 0;
+//     }
+// }
+
+// input[type=range] {
+//     width: 100%;
+//     -webkit-appearance: none;
+//     -moz-appearance: none;
+//     appearance: none;
+// //     border-radius: 6px;
+// //     outline: none;
+// //     overflow: hidden;
+// //     height: 11px;
+// //     @media (max-width: 768px) {
+// //         width: 100%;
+// //     }
+// // }
+// // input[type=range]::-webkit-slider-runnable-track {
+// //     height: 20px;
+// // }
+// // input[type=range]::-webkit-slider-thumb {
+// //     -webkit-appearance: none;
+// //     // height: 19px;
+// //     // width: 10px;
+// //     overflow: hidden;
+// //     margin-top: -20px;
+// //     background: url(../img/cal-icon.svg);
+// //     background-size: cover;
+// //     background-repeat: no-repeat;
+// //     box-shadow: 0px 0px 10px #80F1B1, -700px 0px 0px 700px #80F1B1;
+// //     cursor: pointer;
+// //     position: relative;
+// // }
+// // input[type=range]::-moz-range-track {
+// //     height: 11px;
+// // }
+// // input[type=range]::-moz-range-thumb {
+// //     cursor: pointer;
+// //     height: 7px;
+    
+// //     border-radius: 0px;
+// //     padding: 0px;
+// //     position: relative;
+// //     margin: 0px;
+// // }
+// // .rs-label {
+// //     position: absolute;
+// //     transform-origin: center center;
+// //     display: block;
+// //     width: 130px;
+// //     height: 49px;
+// //     background: transparent;
+// //     top: -15px;
+
+// //     line-height: 30px;
+// //     text-align: center;
+// //     font-weight: bold;
+// //     padding-top: 5px;
+// //     outline: none;
+// //     box-sizing: border-box;
+
+// //     border: 1px solid grey;
+// //     border-radius: 5px;
+// //     margin-top: 20px;
+// //     left: attr(value);
+// //     color: #000;
+// //     display: flex;
+// //     align-items: center;
+// //     justify-content: center;
+// //     font-size: 16px;
+// //     font-weight: 400;
+// //     ::after {
+// //         content: "$";
+// //         display: block;
+// //         font-size: 20px;
+// //         letter-spacing: 0.07em;
+// //         margin-top: -2px;
+// //         margin-left: 5px;
+// //         font-size: 16px;
+// //         font-weight: 400;
+// //     }
+
+// // }
+
+
+
+
+
