--- a/src/assets/scss/pages/calculator/_policyholder.scss
+++ b/src/assets/scss/pages/calculator/_policyholder.scss
@@ -29,8 +29,9 @@
     &-form {
         &__group {
             display: flex;
-            max-width: 518px;
+            position: relative;
             justify-content: space-between;
+            padding-top: 50px;
             padding-bottom: 30px;
             &--price {
                 padding-bottom: 0 !important;
@@ -45,7 +46,6 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
-            width: 518px;
             font-size: 22px;
             span {
                 margin-left: 25px;
