--- a/src/assets/scss/pages/calculator/_policyholder.scss
+++ b/src/assets/scss/pages/calculator/_policyholder.scss
@@ -58,6 +58,7 @@
             width: 203px;
             margin: 0;
             text-decoration: none ;
+            margin-left: 50px;
         }
 
         &__block {
