--- a/src/assets/scss/components/_slider.scss
+++ b/src/assets/scss/components/_slider.scss
@@ -23,6 +23,7 @@
         width: 100%;
         height: 100%;
         overflow: hidden;
+        margin-bottom: 50px;
     }
     
     &-wrapper {
@@ -34,6 +35,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        margin-left: 20px;
         
         position: relative;
         text-align: center;
